--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -23,7 +23,7 @@
             <th>
               <button class='btn btn-primary'
                       (click)='toggleImage()'>
-                {{showImage ? 'Hide' : 'Show'}} Image
+               <!-- {{showImage ? 'Hide' : 'Show'}} --> Show Image
               </button>
             </th>
             <th>Product</th>
