--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -21,8 +21,7 @@
         <thead>
           <tr>
             <th>
-              <button class='btn btn-primary'
-                      (click)='toggleImage()'>
+              <button class='btn btn-primary'> <!-- (click)='toggleImage()'  -->
                <!-- {{showImage ? 'Hide' : 'Show'}} --> Show Image
               </button>
             </th>
@@ -45,7 +44,8 @@
             <td>{{ product.productName }}</td>
             <td>{{ product.productCode | lowercase }}</td>
             <td>{{ product.releaseDate }}</td>
-            <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }}</td>
+             <td>{{ product.price | currency }}</td>
+           <!-- <td>{{ product.price | currency:'USD':'symbol':'1.2-2' }} </td> -->
             <td>{{ product.starRating }}</td>
           </tr>
         </tbody>
